# BNMT

./: Makefile  README.md  meson.build  meson_options.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: manual-release.yml
build-scripts/: make_release.py  meson-build-and-run.sh  meson-config.sh  meson-debug.sh  return_fail.py
data/mods/_me_interface/: mod_tileset.json  modinfo.json  snippets.json
data/raw/: keybindings.json
doc/BNME/: BUGS.md  COMPILING.md  INSTALL.md  TODO.md  TUTORIAL.md
src/: cata_tiles.h  coordinates.h  debug.cpp  debug_menu.cpp  game.cpp  game.h  itype.h  json.h  main.cpp  mapgen.cpp  mapgen.h  mapgen_map_key.h  meson.build  mongroup.h  npc.cpp  npc.h  omdata.h  overmap.cpp  overmap_ui.cpp  point.h  sdltiles.cpp  text_snippets.h  translations.h  trap.cpp  trap.h  type_id.h  veh_interact.cpp  veh_utils.cpp
src/editor/: ImGuiFileDialog.cpp  ImGuiFileDialog.h  ImGuiFileDialogConfig.h  app.cpp  app.h  camera.cpp  camera.h  canvas.cpp  canvas.h  canvas_tools.cpp  canvas_tools.h  color.h  editable_id.cpp  editable_id.h  editor_engine.cpp  editor_engine.h  file.cpp  file.h  fts_fuzzy_match.cpp  fts_fuzzy_match.h  history.cpp  history.h  int_range.h  map_key_gen.cpp  map_key_gen.h  mapobject.cpp  mapobject.h  meson.build  palette.cpp  palette.h  piece.cpp  piece.h  piece_impl.cpp  piece_impl.h  piece_type.h  project.cpp  project.h  save_and_export.cpp  save_and_export.h  sprite_ref.h  (+20 more)
subprojects/: .gitignore  imgui.wrap  libjpeg-turbo.wrap  sdl2.wrap
tools/format/: format.cpp  format.h  meson.build
