
lib_sources = files(
    'achievement.cpp',
    'action.cpp',
    'active_item_cache.cpp',
    'active_tile_data.cpp',
    'activity_actor.cpp',
    'activity_handlers.cpp',
    'activity_item_handling.cpp',
    'activity_type.cpp',
    'addiction.cpp',
    'advanced_inv_area.cpp',
    'advanced_inv_listitem.cpp',
    'advanced_inv_pane.cpp',
    'advanced_inv.cpp',
    'ammo_effect.cpp',
    'ammo.cpp',
    'anatomy.cpp',
    'animation.cpp',
    'armor_layers.cpp',
    'artifact.cpp',
    'ascii_art.cpp',
    'auto_note.cpp',
    'auto_pickup.cpp',
    'avatar_action.cpp',
    'avatar.cpp',
    'ballistics.cpp',
    'basecamp.cpp',
    'behavior_oracle.cpp',
    'behavior_strategy.cpp',
    'behavior.cpp',
    'bionics_ui.cpp',
    'bionics.cpp',
    'bodypart.cpp',
    'bonuses.cpp',
    'cached_options.cpp',
    'calendar.cpp',
    'cata_libintl.cpp',
    'cata_tiles.cpp',
    'cata_utility.cpp',
    'cata_variant.cpp',
    'catacharset.cpp',
    'char_validity_check.cpp',
    'character_display.cpp',
    'character_functions.cpp',
    'character_martial_arts.cpp',
    'character_oracle.cpp',
    'character.cpp',
    'clothing_mod.cpp',
    'clzones.cpp',
    'color.cpp',
    'computer_session.cpp',
    'computer.cpp',
    'condition.cpp',
    'construction_category.cpp',
    'construction_group.cpp',
    'construction_sequence.cpp',
    'construction.cpp',
    'consumption.cpp',
    'coordinate_conversions.cpp',
    'craft_command.cpp',
    'crafting_gui.cpp',
    'crafting.cpp',
    'crash.cpp',
    'creature_tracker.cpp',
    'creature.cpp',
    'cursesport.cpp',
    'damage.cpp',
    'debug_menu.cpp',
    'debug.cpp',
    'dependency_tree.cpp',
    'descriptions.cpp',
    'dialogue_win.cpp',
    'diary_ui.cpp',
    'diary.cpp',
    'disease.cpp',
    'dispersion.cpp',
    'distraction_manager.cpp',
    'distribution_grid.cpp',
    'drawing_primitives.cpp',
    'drop_token.cpp',
    'dump.cpp',
    'editmap.cpp',
    'effect.cpp',
    'emit.cpp',
    'event_bus.cpp',
    'event_field_transformations.cpp',
    'event_statistics.cpp',
    'event.cpp',
    'examine_item_menu.cpp',
    'explosion.cpp',
    'faction_camp.cpp',
    'faction.cpp',
    'fault.cpp',
    'field_type.cpp',
    'field.cpp',
    'filesystem.cpp',
    'flag.cpp',
    'fmtlib_format.cpp',
    'fungal_effects.cpp',
    'game_inventory.cpp',
    'game_ui.cpp',
    'game.cpp',
    'gamemode_defense.cpp',
    'gamemode_tutorial.cpp',
    'gamemode.cpp',
    'gates.cpp',
    'grab.cpp',
    'handle_action.cpp',
    'handle_liquid.cpp',
    'harvest.cpp',
    'help.cpp',
    'iexamine.cpp',
    'ime.cpp',
    'init.cpp',
    'input.cpp',
    'inventory_ui.cpp',
    'inventory.cpp',
    'item_action.cpp',
    'item_category.cpp',
    'item_contents.cpp',
    'item_factory.cpp',
    'item_functions.cpp',
    'item_group.cpp',
    'item_location.cpp',
    'item_search.cpp',
    'item_stack.cpp',
    'item.cpp',
    'iteminfo_query.cpp',
    'itype.cpp',
    'iuse_actor.cpp',
    'iuse_software_kitten.cpp',
    'iuse_software_lightson.cpp',
    'iuse_software_minesweeper.cpp',
    'iuse_software_snake.cpp',
    'iuse_software_sokoban.cpp',
    'iuse_software.cpp',
    'iuse.cpp',
    'json.cpp',
    'kill_tracker.cpp',
    'language.cpp',
    'lightmap.cpp',
    'line.cpp',
    'live_view.cpp',
    'loading_ui.cpp',
    'lru_cache.cpp',
    'magic_enchantment.cpp',
    'magic_spell_effect.cpp',
    'magic_teleporter_list.cpp',
    'magic_ter_fur_transform.cpp',
    'magic.cpp',
    'main_menu.cpp',
    'main.cpp',
    'map_extras.cpp',
    'map_field.cpp',
    'map_functions.cpp',
    'map_item_stack.cpp',
    'map_memory.cpp',
    'map_selector.cpp',
    'map.cpp',
    'mapbuffer.cpp',
    'mapdata.cpp',
    'mapgen_functions.cpp',
    'mapgen.cpp',
    'mapgendata.cpp',
    'mapgenformat.cpp',
    'mapsharing.cpp',
    'martialarts.cpp',
    'material.cpp',
    'matrix_math.cpp',
    'mattack_actors.cpp',
    'melee.cpp',
    'memorial_logger.cpp',
    'messages.cpp',
    'mission_companion.cpp',
    'mission_end.cpp',
    'mission_place.cpp',
    'mission_start.cpp',
    'mission_ui.cpp',
    'mission_util.cpp',
    'mission.cpp',
    'missiondef.cpp',
    'mod_manager_ui.cpp',
    'mod_manager.cpp',
    'mod_tileset.cpp',
    'monattack.cpp',
    'mondeath.cpp',
    'mondefense.cpp',
    'monexamine.cpp',
    'monfaction.cpp',
    'mongroup.cpp',
    'monmove.cpp',
    'monster_oracle.cpp',
    'monster.cpp',
    'monstergenerator.cpp',
    'morale_types.cpp',
    'morale.cpp',
    'mtype.cpp',
    'mutation_data.cpp',
    'mutation_type.cpp',
    'mutation_ui.cpp',
    'mutation.cpp',
    'name.cpp',
    'ncurses_def.cpp',
    'newcharacter.cpp',
    'npc_class.cpp',
    'npc.cpp',
    'npcmove.cpp',
    'npctalk_funcs.cpp',
    'npctalk.cpp',
    'npctrade.cpp',
    'options.cpp',
    'output.cpp',
    'overlay_ordering.cpp',
    'overmap_connection.cpp',
    'overmap_location.cpp',
    'overmap_noise.cpp',
    'overmap_ui.cpp',
    'overmap.cpp',
    'overmapbuffer.cpp',
    'panels_utility.cpp',
    'panels.cpp',
    'path_info.cpp',
    'pathfinding.cpp',
    'pickup.cpp',
    'pixel_minimap_projectors.cpp',
    'pixel_minimap.cpp',
    'player_activity.cpp',
    'player_hardcoded_effects.cpp',
    'player.cpp',
    'point.cpp',
    'popup.cpp',
    'posix_time.cpp',
    'profession.cpp',
    'projectile.cpp',
    'ranged_aoe.cpp',
    'ranged.cpp',
    'recipe_dictionary.cpp',
    'recipe_groups.cpp',
    'recipe.cpp',
    'regional_settings.cpp',
    'relic.cpp',
    'requirements.cpp',
    'rng.cpp',
    'rotatable_symbols.cpp',
    'runtime_handlers.cpp',
    'safe_reference.cpp',
    'safemode_ui.cpp',
    'savegame_json.cpp',
    'savegame_legacy.cpp',
    'savegame.cpp',
    'scenario.cpp',
    'scent_map.cpp',
    'scores_ui.cpp',
    'sdl_font.cpp',
    'sdl_geometry.cpp',
    'sdl_utils.cpp',
    'sdl_wrappers.cpp',
    'sdlsound.cpp',
    'sdltiles.cpp',
    'shape.cpp',
    'simple_pathfinding.cpp',
    'simplexnoise.cpp',
    'skill_boost.cpp',
    'skill.cpp',
    'sounds.cpp',
    'speech.cpp',
    'start_location.cpp',
    'stats_tracker.cpp',
    'stomach.cpp',
    'string_editor_window.cpp',
    'string_formatter.cpp',
    'string_id_null_ids.cpp',
    'string_id.cpp',
    'string_input_popup.cpp',
    'string_utils.cpp',
    'submap.cpp',
    'suffer.cpp',
    'teleport.cpp',
    'text_snippets.cpp',
    'tileray.cpp',
    'timed_event.cpp',
    'trait_group.cpp',
    'translations.cpp',
    'trap.cpp',
    'trapfunc.cpp',
    'turret.cpp',
    'ui_manager.cpp',
    'ui.cpp',
    'units_utility.cpp',
    'units.cpp',
    'url_utility.cpp',
    'veh_interact.cpp',
    'veh_type.cpp',
    'veh_utils.cpp',
    'vehicle_autodrive.cpp',
    'vehicle_display.cpp',
    'vehicle_group.cpp',
    'vehicle_move.cpp',
    'vehicle_part.cpp',
    'vehicle_selector.cpp',
    'vehicle_use.cpp',
    'vehicle.cpp',
    'version.cpp',
    'visitable.cpp',
    'vitamin.cpp',
    'wcwidth.cpp',
    'weather_gen.cpp',
    'weather_type.cpp',
    'weather.cpp',
    'wincurse.cpp',
    'wish.cpp',
    'wisheffect.cpp',
    'worldfactory.cpp',
)

subdir('editor/')

vcs_tag(
    command: [ 'git', 'describe', '--tags', '--match', 'bnme-*' ],
    input: 'version.h.in',
    output: 'version.h',
    replace_string: '@VERSION@'
)
