
editor_sources = files(
    'app.cpp',
    'camera.cpp',
    'canvas_tools.cpp',
    'canvas.cpp',
    'editable_id.cpp',
    'editor_engine.cpp',
    'file.cpp',
    'fts_fuzzy_match.cpp',
    'history.cpp',
    'ImGuiFileDialog.cpp',
    'map_key_gen.cpp',
    'mapobject.cpp',
    'palette.cpp',
    'piece_impl.cpp',
    'piece.cpp',
    'project.cpp',
    'save_and_export.cpp',
    'state_export.cpp',
    'state_serde.cpp',
    'state.cpp',
    'title_screen.cpp',
    'uistate_store.cpp',
    'uistate.cpp',
    'widget_combofilter.cpp',
    'widgets.cpp',
)
